--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mongonodeserver",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,6 +15,15 @@
   "bugs": {
     "url": "https://github.com/bradenripple5/mern_stack/issues"
   },
-  "homepage": "https://github.com/bradenripple5/mern_stack#readme"
-  
+  "homepage": "https://github.com/bradenripple5/mern_stack#readme",
+  "dependencies": {
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "mongoose": "^7.2.2",
+    "passport": "^0.6.0",
+    "passport-facebook-token": "^4.0.0",
+    "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {},
+  "description": ""
 }
